# PopBERT

./: .gitignore  LICENSE  README.md  dvc.yaml  job_run_all.sh  pyproject.toml  results  run_all.sh  setup.py  slurm_job.sh
.dvc/: config
code/: 01-annotator_performance.ipynb  02-create_gbert_model.ipynb  03-make_predictions.ipynb  03-model_performance.ipynb  04-all_dimensions.ipynb  04-make_predictions.ipynb  05-all_dimensions.ipynb  05-populism_by_speech.ipynb  06-populism_by_politician.ipynb  07-populism_by_speech.ipynb  08-run_gruendl.R  08-selected_examples_table.ipynb  09-selected_examples_table.ipynb  pyproject.toml  run_all.sh
code/code/: 01-annotator_performance.ipynb  02-create_popbert_model.ipynb  03-model_performance.ipynb  05-all_dimensions.ipynb  06-populism_by_politician.ipynb
code/data/raw/: .gitignore  sentences.parquet.gzip.dvc
code/r/: CHES_Validation.R  External_Sentences_Correlation.R  dependencies.R
code/results/: .gitignore
code/results/figures/: .gitignore
code/src/: __init__.py
code/src/bert/: module.py
code/src/bert/dataset/: dataset.py
code/src/bert/gridsearch/: __init__.py  gridsearch.py  result_manager.py
code/src/db/: __init__.py  connect.py
code/src/db/models/: __init__.py  bert_data.py  open_discourse.py
code/src/pop_dict/: simple_dicts.py
code/src/web/: models.py  sessionmanager.py
code/src/web/templates/: index.html
data/: Populist_examples_from_other_studies.csv  Populist_examples_from_other_studies_with_probas.csv
data/interim/: .gitignore
data/raw/: sentences.parquet.gzip.dvc
data_scripts/: 01-raw_sentences.ipynb
environment/: Dockerfile
metadata/: metadata.yml
notebooks/01-pipeline/: 01-create_examples.ipynb  03-update_bert_data.ipynb  05-find_hyperparameters.ipynb  06-cross_validate.ipynb  07-full_model.ipynb
notebooks/02-coding/: 01-coding_coverage.ipynb  02-disagreement_on_codes.ipynb  03-label_evaluation.ipynb  04-annotator_performance.ipynb  05-export_disagreement.ipynb  06-create_missing_annotations.ipynb
notebooks/03-model/: 00-build_train_test_data.ipynb  01-gridsearch.py  02-gridsearch_results.ipynb  03-1-create_classification_report.ipynb  03-create_gbert_model.ipynb  04-create_predictions.ipynb  05-create_mbert_model.ipynb  06-create_roberta_model.ipynb  07-create_gepabert_model.ipynb  99-tmp.ipynb
notebooks/04-dictionary_approaches/: 01-example.ipynb  02-create-labelled_data.ipynb
notebooks/05-analysis/: 01-all_dimensions.ipynb  04-populism_by_politician.ipynb  05-external_sentences_validation.ipynb  06-CHES_comparison.ipynb  07-1_create_wordfish_dataset.ipynb  07-MOPE_comparison.ipynb  07-wordfish.Rmd  08-gruendl_contingency_table.ipynb
notebooks/06-article_descriptives/: 01-sentence_dataset.ipynb  04-stratified_sentence_sample.ipynb  05-export_predictions.ipynb  07-export_labeled_data.ipynb  99-raphaels_data.ipynb
r/: run_gruendl.R
results/figures/: .gitignore
results/tables/: .gitignore
src/: pop_aggregate.py
src/01-pipeline/: 02-create_single_sample.ipynb  04-build_train_test_data.ipynb  08-create_new_batch.ipynb  09-create_predictions.ipynb  99-validate_pop_model.ipynb
tests/: test_db.py  test_gridsearch.py  test_pop_aggregate.py  test_thresholds.py
(+40 files in other folders)
